# rust-sandbox

./: .gitignore  Cargo.toml
hello_cargo/: Cargo.toml
hello_cargo/src/: main.rs
hello_rust/: main
src/: closures.rs  enum.rs  generics.rs  lifetime.rs  match.rs  method.rs  more_generics.rs  mutability.rs  sandbox1.rs  string.rs  struct.rs  trait.rs
src/24days/: day2.rs  day3.rs  day4.rs
src/guess/: main.rs
src/hello_rust/: main.rs
src/ownership/: main.rs
src/syntax/: main.rs
