[package]
name = "rust-sandbox"
version = "0.1.0"
authors = ["Tatsuya Takamura <takamura@tonchidot.com>"]

[dependencies]
rand="0.3.0"
primal = "~0.2.3"
csv = "~0.14.7"
rustc-serialize = "~0.3.18"
docopt = "~0.6.78"

[[bin]]
name = "hello_rust"
path = "src/hello_rust/main.rs"

[[bin]]
name = "guess"
path = "src/guess/main.rs"

[[bin]]
name = "syntax"
path = "src/syntax/main.rs"

[[bin]]
name = "day2"
path = "src/24days/day2.rs"

[[bin]]
name = "day3"
path = "src/24days/day3.rs"

[[bin]]
name = "day4"
path = "src/24days/day4.rs"
